# biped-walking-gz

./: .gitignore  LICENSE  README.md  package.xml  setup.cfg  setup.py  token.txt
biped_description/: walking_controller.py
biped_description/scripts/: walking_controller.py
config/: biped_controllers.yaml
docs/images/: placeholder.txt
launch/: gazebo_sim.launch.py  rviz.launch.py
urdf/: biped.urdf.xacro  biped_control.xacro
